force-app/main/default/objects/License__c/fields/Admin_Access__c.field-meta.xml
<CustomField>
    <fullName>Admin_Access__c</fullName>
    <label>Admin Access</label>
    <length>64</length>
    <type>Text</type>
</CustomField>