force-app/main/default/objects/License__c/fields/Annual_Price_Per_License__c.field-meta.xml
<CustomField>
    <fullName>Annual_Price_Per_License__c</fullName>
    <label>Annual Price Per License</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>