force-app/main/default/objects/License__c/fields/Level_NEW__c.field-meta.xml
<CustomField>
    <fullName>Level_NEW__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Full</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Force.com</fullName>
            </value>
            <value>
                <fullName>Marketing User</fullName>
            </value>
            <value>
                <fullName>Full Accounting User</fullName>
            </value>
            <value>
                <fullName>Premium Support Admin</fullName>
            </value>
            <value>
                <fullName>Platform (Certinia)</fullName>
            </value>
            <value>
                <fullName>Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Hoover&apos;s Online</fullName>
            </value>
            <value>
                <fullName>Full Access</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Hunter.io Growth</fullName>
            </value>
            <value>
                <fullName>Hunter.io Starter</fullName>
            </value>
            <value>
                <fullName>State &amp; Local Gov.</fullName>
            </value>
            <value>
                <fullName>Visual Content</fullName>
            </value>
            <value>
                <fullName>Tableau Creator</fullName>
            </value>
            <value>
                <fullName>Monday App - Pro</fullName>
            </value>
            <value>
                <fullName>Conga Composer - Business</fullName>
            </value>
            <value>
                <fullName>SmartSearch - Search License</fullName>
            </value>
            <value>
                <fullName>Enterprise License User</fullName>
            </value>
            <value>
                <fullName>USA National Service</fullName>
            </value>
            <value>
                <fullName>State of South Dakota Sourcing</fullName>
            </value>
            <value>
                <fullName>InCopy</fullName>
            </value>
            <value>
                <fullName>Creative Cloud</fullName>
            </value>
            <value>
                <fullName>Illustrator</fullName>
            </value>
            <value>
                <fullName>Photoshop</fullName>
            </value>
            <value>
                <fullName>Acrobat Standard</fullName>
            </value>
            <value>
                <fullName>Acrobat Pro</fullName>
            </value>
            <value>
                <fullName>Advantage Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>