force-app/main/default/objects/License__c/fields/License_Software__c.field-meta.xml
<CustomField>
    <fullName>License_Software__c</fullName>
    <label>License Software</label>
    <referenceTo>License_Software__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>