force-app/main/default/objects/License__c/fields/License_User__c.field-meta.xml
<CustomField>
    <fullName>License_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License User</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>