force-app/main/default/objects/License__c/fields/License_User_Role__c.field-meta.xml
<CustomField>
    <fullName>License_User_Role__c</fullName>
    <formula>License_User__r.Salesforce_User__r.UserRole.Name</formula>
    <label>License User Role</label>
    <type>Text</type>
</CustomField>