force-app/main/default/objects/License__c/fields/License_User_Status__c.field-meta.xml
<CustomField>
    <fullName>License_User_Status__c</fullName>
    <formula>TEXT(License_User__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License User Status</label>
    <type>Text</type>
</CustomField>