force-app/main/default/objects/License__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(
  NOT(ISBLANK( License_User__c )),
  License_User__r.Last_Name__c &amp; &quot;, &quot; &amp;  License_User__r.First_Name__c,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>