force-app/main/default/objects/License__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absorb</fullName>
            </value>
            <value>
                <fullName>Act-On</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Adobe (Editorial)</fullName>
            </value>
            <value>
                <fullName>Airtable</fullName>
            </value>
            <value>
                <fullName>Alchemer</fullName>
            </value>
            <value>
                <fullName>Apple Business</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
            <value>
                <fullName>Brightspot</fullName>
            </value>
            <value>
                <fullName>BriteVerify</fullName>
            </value>
            <value>
                <fullName>Buffer</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Camtasia</fullName>
            </value>
            <value>
                <fullName>Canva (Design)</fullName>
            </value>
            <value>
                <fullName>Canva (Marketing)</fullName>
            </value>
            <value>
                <fullName>Canva (People &amp; Culture)</fullName>
            </value>
            <value>
                <fullName>Certinia</fullName>
            </value>
            <value>
                <fullName>Chartbeat</fullName>
            </value>
            <value>
                <fullName>ChatGPT</fullName>
            </value>
            <value>
                <fullName>Claude</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>Convertr</fullName>
            </value>
            <value>
                <fullName>Credly</fullName>
            </value>
            <value>
                <fullName>Crowdpurr</fullName>
            </value>
            <value>
                <fullName>Crunchbase</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>D&amp;B Hoovers</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>FastStone Capture</fullName>
            </value>
            <value>
                <fullName>FlippingBook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>