force-app/main/default/objects/License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>License_Software__c</columns>
    <columns>NAME</columns>
    <columns>Level_NEW__c</columns>
    <columns>License_User__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>